[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/hierarchical_finite_state_machine/editor/icon/moveup_icon.png" type="Texture" id=1]
[ext_resource path="res://addons/hierarchical_finite_state_machine/editor/icon/movedown_icon.png" type="Texture" id=2]
[ext_resource path="res://addons/hierarchical_finite_state_machine/editor/variable_editor.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0156863, 0.466667, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="VariableEditor" type="HBoxContainer"]
margin_right = 268.0
margin_bottom = 26.0
mouse_filter = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VariableEditor" type="MarginContainer" parent="."]
margin_right = 245.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VariableEditor" type="HBoxContainer" parent="VariableEditor"]
margin_right = 245.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveUpButton" type="Button" parent="VariableEditor/VariableEditor"]
visible = false
margin_right = 27.0
margin_bottom = 26.0
icon = ExtResource( 1 )

[node name="MoveDownButton" type="Button" parent="VariableEditor/VariableEditor"]
visible = false
margin_right = 26.0
margin_bottom = 26.0
icon = ExtResource( 2 )

[node name="ValueTypeButton" type="OptionButton" parent="VariableEditor/VariableEditor"]
margin_right = 81.0
margin_bottom = 26.0
rect_min_size = Vector2( 81, 0 )
action_mode = 1
text = "Trigger"
align = 1
items = [ "Trigger", null, false, 0, null, "Boolean", null, false, 1, null, "Integer", null, false, 2, null, "Float", null, false, 3, null, "String", null, false, 4, null ]
selected = 0

[node name="NameEdit" type="LineEdit" parent="VariableEditor/VariableEditor"]
margin_left = 85.0
margin_right = 157.0
margin_bottom = 26.0
rect_min_size = Vector2( 58, 0 )
size_flags_horizontal = 3
expand_to_text_length = true
placeholder_text = "\"name\""
caret_blink = true
caret_blink_speed = 0.5

[node name="CommentEdit" type="LineEdit" parent="VariableEditor/VariableEditor"]
margin_left = 161.0
margin_right = 245.0
margin_bottom = 26.0
rect_min_size = Vector2( 84, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_selected = Color( 0.662745, 0.133333, 0.133333, 1 )
custom_colors/font_color = Color( 0, 0.52549, 0.74902, 1 )
expand_to_text_length = true
placeholder_text = "\"comment\""
caret_blink = true
caret_blink_speed = 0.5

[node name="DragButton" type="Button" parent="VariableEditor"]
margin_right = 245.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut_in_tooltip = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeletButton" type="Button" parent="."]
margin_left = 249.0
margin_right = 268.0
margin_bottom = 26.0
size_flags_horizontal = 9
size_flags_vertical = 7
text = "x"

[connection signal="pressed" from="VariableEditor/VariableEditor/MoveUpButton" to="." method="_on_MoveUpButton_pressed"]
[connection signal="pressed" from="VariableEditor/VariableEditor/MoveDownButton" to="." method="_on_MoveDownButton_pressed"]
[connection signal="item_selected" from="VariableEditor/VariableEditor/ValueTypeButton" to="." method="_on_ValueTypeButton_item_selected"]
[connection signal="text_changed" from="VariableEditor/VariableEditor/NameEdit" to="." method="_on_NameEdit_text_changed"]
[connection signal="text_changed" from="VariableEditor/VariableEditor/CommentEdit" to="." method="_on_CommentEdit_text_changed"]
[connection signal="gui_input" from="VariableEditor/DragButton" to="." method="_on_DragButton_gui_input"]
[connection signal="pressed" from="VariableEditor/DragButton" to="." method="_on_DragButton_pressed"]
[connection signal="pressed" from="DeletButton" to="." method="_on_DeletButton_pressed"]
